--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loadsell",
+    "name": "loadsell",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.13"
   }
 }
